Add ability to order runs by metrics (#164)
* Add ability to order runs by metrics

* Add sort filter to dashboard runs table

--- a/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/HubExperimentsDashboardScreen.less
@@ -8,7 +8,8 @@
 }
 
 .HubExperimentsDashboardScreen__content__block {
-  padding: var(--component-spacing-sm) var(--component-spacing-md) var(--component-spacing-md);
+  padding: var(--component-spacing-sm) var(--component-spacing-md)
+    var(--component-spacing-md);
 
   &.HubExperimentsDashboardScreen__content__block--activity {
     background-color: var(--grey-lighter);
