--- a/client/src/screens/hub/HubExperimentsDashboardScreen/components/Activity/Activity.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/components/Activity/Activity.less
@@ -55,7 +55,7 @@
 }
 
 .HubExperimentsDashboardScreen__activity__stats__figure {
-  color: #FFF;
+  color: #fff;
 }
 
 .HubExperimentsDashboardScreen__activity__stats__title {
@@ -85,7 +85,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background: #FFF;
+  background: #fff;
   border: 1px solid var(--grey-light-xx);
   border-radius: var(--border-radius);
   box-sizing: border-box;
