--- a/client/src/ui/components/CalendarHeatmap/CalendarHeatmap.less
+++ b/client/src/ui/components/CalendarHeatmap/CalendarHeatmap.less
@@ -62,9 +62,19 @@
     cursor: auto;
   }
 
-  &.CalendarHeatmap__cell--scale-0 { background-color: var(--grey-bg); }
-  &.CalendarHeatmap__cell--scale-1 { background-color: var(--primary-lighter); }
-  &.CalendarHeatmap__cell--scale-2 { background-color: var(--primary-light); }
-  &.CalendarHeatmap__cell--scale-3 { background-color: var(--primary); }
-  &.CalendarHeatmap__cell--scale-4 { background-color: var(--primary-dark); }
+  &.CalendarHeatmap__cell--scale-0 {
+    background-color: var(--grey-bg);
+  }
+  &.CalendarHeatmap__cell--scale-1 {
+    background-color: var(--primary-lighter);
+  }
+  &.CalendarHeatmap__cell--scale-2 {
+    background-color: var(--primary-light);
+  }
+  &.CalendarHeatmap__cell--scale-3 {
+    background-color: var(--primary);
+  }
+  &.CalendarHeatmap__cell--scale-4 {
+    background-color: var(--primary-dark);
+  }
 }
