--- a/client/src/screens/hub/HubExperimentsDashboardScreen/components/Runs/Runs.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/components/Runs/Runs.less
@@ -1,10 +1,14 @@
-@grid-content-cell-height: calc(100vh -  var(--component-spacing-sm) - var(--component-spacing-md) - 20px);
+@grid-content-cell-height: calc(
+  100vh - var(--component-spacing-sm) - var(--component-spacing-md) - 20px
+);
 
 .HubExperimentsDashboardScreen__runs {
 }
 
 .HubExperimentsDashboardScreen__runs__body {
-  height: calc(100vh - var(--component-spacing-sm) - var(--component-spacing-md));
+  height: calc(
+    100vh - var(--component-spacing-sm) - var(--component-spacing-md)
+  );
   width: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
@@ -30,7 +34,9 @@
 }
 
 .HubExperimentsDashboardScreen__runs__table__wrapper {
-  height: calc(@grid-content-cell-height - var(--component-spacing-sm) - 2.2rem);
+  height: calc(
+    @grid-content-cell-height - var(--component-spacing-sm) - 2.2rem
+  );
   box-sizing: border-box;
   overflow: auto;
   width: auto;
