Display error message when an invalid AimQL query is made (#167)
* Display error message when an invalid AimQL query is made

* Display error message on the dashboard

--- a/client/src/screens/hub/HubExperimentsDashboardScreen/components/Runs/Runs.less
+++ b/client/src/screens/hub/HubExperimentsDashboardScreen/components/Runs/Runs.less
@@ -5,6 +5,17 @@
 .HubExperimentsDashboardScreen__runs {
 }
 
+.HubExperimentsDashboardScreen__runs__alert {
+  margin: var(--component-spacing-sm) 0;
+
+  &.HubExperimentsDashboardScreen__runs__alert--segment {
+    padding: var(--component-spacing-sm);
+    border: 1px solid var(--grey-lighter);
+    background-color: #fff;
+    border-radius: var(--border-radius);
+  }
+}
+
 .HubExperimentsDashboardScreen__runs__body {
   height: calc(
     100vh - var(--component-spacing-sm) - var(--component-spacing-md)
