--- a/client/src/screens/hub/HubMainScreen/components/Alert/Alert.less
+++ b/client/src/screens/hub/HubMainScreen/components/Alert/Alert.less
@@ -1,8 +1,10 @@
-.Alert {
-  padding: var(--component-spacing-sm) var(--component-spacing-sm);
-  /* margin: 20px;
-  / background-color: #FFF;
-  / border: 1px solid var(--grey-light-xx);
-  / border-radius: var(--border-radius);
-   */
+.HubMainScreenAlert {
+  margin: var(--component-spacing-sm);
+
+  &.HubMainScreenAlert--segment {
+    padding: var(--component-spacing-sm);
+    border: 1px solid var(--grey-light-xx);
+    background-color: #fff;
+    border-radius: var(--border-radius);
+  }
 }
