Tune styles of a Parameter with no context value (#168)
Co-authored-by: Ruben Karapetyan <karapetyanrouben@gmail.com>

--- a/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
+++ b/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
@@ -165,6 +165,7 @@
   height: 20px;
   border-radius: 50%;
   user-select: none;
+  cursor: pointer;
 
   &:hover {
     background-color: var(--grey-lighter);
@@ -173,6 +174,13 @@
   &:active {
     background-color: var(--grey-light-xx);
   }
+}
+
+.BarSort__group__item__name__meta {
+  color: #777;
+  font-size: 0.9em;
+  text-transform: lowercase;
+  font-style: italic;
 }
 
 .BarSort__selected__item__field {
