--- a/client/src/ui/components/Tab/Tab.less
+++ b/client/src/ui/components/Tab/Tab.less
@@ -28,6 +28,7 @@
   color: var(--grey);
   cursor: pointer;
   border-bottom: 3px solid transparent;
+  user-select: none;
 
   &:hover {
     color: var(--primary-dark);
