--- a/client/src/components/hub/ExperimentCell/ExperimentCell.less
+++ b/client/src/components/hub/ExperimentCell/ExperimentCell.less
@@ -5,7 +5,7 @@
   width: 50%;
   overflow: auto;
   box-sizing: border-box;
-  padding: var(--component-spacing-sm);
+  padding: var(--component-spacing-xs);
 
   @media @md-max {
     width: 100%;
