Generate group style from config hash (#171)

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -81,7 +81,7 @@
   right: 55px;
   background-color: #fff;
   outline: 0;
-  width: 350px;
+  width: 400px;
   overflow-y: auto;
   border: 1px solid var(--primary-lighter);
   border-radius: var(--border-radius);
@@ -123,6 +123,12 @@
 .ControlsSidebar__item__popup__body__field {
   margin-top: var(--component-spacing-xs);
   margin-right: var(--component-spacing-xs);
+}
+
+.ControlsSidebar__item__popup__body__action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .ControlsSidebar__item__popup__list {
