--- a/client/src/ui/components/Segment/Segment.less
+++ b/client/src/ui/components/Segment/Segment.less
@@ -14,7 +14,7 @@
       border-color: var(--positive-lighter);
     }
     &.negative {
-      border-color: var(--negative-lighter);
+      border-color: var(--negative-light);
     }
     &.secondary {
       background-color: var(--grey-bg);
