[feat] Add ability to align X axis by epoch (#155)
* Add ability to align by epoch

* Draw closest circle for current step

* Add range slider to select chart points count

* Get number of metric steps from request

* Sort runs

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -50,6 +50,10 @@
     color: var(--grey-dark);
   }
 
+  &.column {
+    flex-direction: column;
+  }
+
   &:active,
   &.active {
     background-color: var(--primary-bg);
@@ -135,6 +139,11 @@
   a:hover {
     text-decoration: none !important;
   }
+}
+
+.ControlsSidebar__item__popup__item {
+  padding: var(--component-spacing-xs) var(--component-spacing-sm);
+  color: var(--primary);
 }
 
 .ControlsSidebar__item__popup__list__item {
