Fix issue with only param parplot

--- a/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
+++ b/client/src/screens/hub/HubExperimentScreen/HubExperimentScreen.less
@@ -235,7 +235,7 @@
   padding: var(--component-spacing-sm);
   overflow: hidden;
   font-size: 0.85em;
-  background-color: #FFF;
+  background-color: #fff;
 
   &:last-of-type {
     margin-bottom: 0;
