Apply user select none style on BarSort select item

--- a/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
+++ b/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
@@ -197,6 +197,7 @@
   padding: 2px;
   background-color: var(--grey-lighter);
   border-radius: var(--border-radius);
+  user-select: none;
 }
 
 .BarSort__selected__item__order__item {
