Make BarSort selected item color grey

--- a/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
+++ b/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
@@ -166,9 +166,11 @@
   border-radius: 50%;
   user-select: none;
   cursor: pointer;
+  color: var(--grey-dark);
 
   &:hover {
     background-color: var(--grey-lighter);
+    color: var(--grey-darker);
   }
 
   &:active {
