--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
@@ -110,20 +110,31 @@
     stroke-width: 1 !important;
     transition: all 200ms ease;
     cursor: pointer;
+    
+    &.inactive {
+      opacity: 0.5;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
 
     &.active {
       stroke: var(--primary-light);
-      stroke-width: 5 !important;
+      stroke-width: 3 !important;
+      opacity: 1;
     }
 
     &:active {
       stroke: var(--primary);
-      stroke-width: 2 !important;
+      stroke-width: 1 !important;
+      opacity: 1;
     }
 
     &.focus {
       stroke: var(--primary) !important;
-      stroke-width: 3 !important;
+      stroke-width: 2 !important;
+      opacity: 1;
     }
   }
 
