Enhance aggregation functionality and improve chart UX (#175)
* Fix issue with group seed value in case of parplot view

* Fix group stroke style seed change issue

* Apply user select none style on BarSort select item

* Make BarSort selected item color grey

* Fix nested params paths issue for hide filter in dashboard screen

* Fix alignment for only one step epochs

* Display tracelist step and epoch if its unique

* Set correct chart step on reload

* Align traces only within same subplot

* Improve circle styles

* Apply code formatting

* Fix circle highlighting for same run.hash mode

* Fix circle highlighting for metric mode

* Avoid special chars in css selectors

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
+++ b/client/src/components/hub/ContextTable/components/BarSort/BarSort.less
@@ -166,9 +166,11 @@
   border-radius: 50%;
   user-select: none;
   cursor: pointer;
+  color: var(--grey-dark);
 
   &:hover {
     background-color: var(--grey-lighter);
+    color: var(--grey-darker);
   }
 
   &:active {
@@ -197,6 +199,7 @@
   padding: 2px;
   background-color: var(--grey-lighter);
   border-radius: var(--border-radius);
+  user-select: none;
 }
 
 .BarSort__selected__item__order__item {
