Add ability to reorder table columns (#186)
* Add popover for reordering columns

* Apply ordering on table

* Merge order popup with hide/show

* Reorder columns applied on grouping

* Fix hidden fields count

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/components/hub/ContextTable/ContextTable.less
+++ b/client/src/components/hub/ContextTable/ContextTable.less
@@ -85,6 +85,7 @@
 .ContextTableBar__item__label {
   display: flex;
   align-items: center;
+  height: 100%;
   padding: 0 10px 0 6px;
   color: var(--primary-dark);
   cursor: pointer;
@@ -112,6 +113,11 @@
 .ContextTableBar__item__label__text {
   margin-left: 6px;
   font-size: var(--text-sm);
+}
+
+.ContextTableBar__item__label__subtext {
+  font-size: var(--text-xs);
+  margin-left: 3px;
 }
 
 .ContextTableBar__item__popup {
