--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -11,14 +11,17 @@
 
   &.Table__container--short {
     --cell-height: 24px;
+    --group-margin: 4px;
   }
 
   &.Table__container--medium {
     --cell-height: 30px;
+    --group-margin: 6px;
   }
 
   &.Table__container--tall {
     --cell-height: 36px;
+    --group-margin: 10px;
   }
 }
 
@@ -66,7 +69,8 @@
   width: -moz-available;
 
   &:last-of-type {
-    .Table__cell {
+    .Table__cell,
+    .Table__group__config__cell {
       border-right: none;
     }
   }
@@ -77,8 +81,9 @@
   display: flex;
   align-items: center;
   background-color: var(--grey-bg);
+  border-right: 1px solid @border-color-dark;
   height: var(--cell-height);
-  padding-bottom: 2px;
+  padding: 0 5px 2px 0;
   box-shadow: inset 0px -1px 0 0 @border-color-dark;
   box-sizing: border-box;
   z-index: 2;
@@ -86,6 +91,10 @@
   &.expanded {
     position: sticky;
     top: calc(2 * var(--cell-height));
+  }
+
+  & > *:nth-of-type(2) {
+    flex: 1;
   }
 }
 
@@ -171,12 +180,21 @@
 
     &.expanded {
       position: sticky;
-      top: calc(3 * var(--cell-height));
+      top: calc(2 * var(--cell-height));
     }
 
     &.expandable:hover {
       background-color: #f3f3f3;
     }
+  }
+
+  &.Table__group__config__column__cell {
+    background-color: var(--grey-bg);
+    border-right: 1px solid @border-color-dark;
+    border-bottom: none;
+  }
+
+  &.active {
   }
 
   & > * {
@@ -249,7 +267,7 @@
 }
 
 .Table__group {
-  margin-top: 10px;
+  margin-top: var(--group-margin);
   background-color: #fff;
   border-top: 1px solid @border-color-dark;
 
@@ -260,12 +278,12 @@
 
 .Table--grouped {
   .Table__pane {
-    padding-bottom: 10px;
+    padding-bottom: var(--group-margin);
     &:first-of-type {
       .Table__column {
         &:first-of-type {
           .Table__group {
-            margin-left: 10px;
+            margin-left: var(--group-margin);
             border-left: 1px solid @border-color-dark;
             border-top-left-radius: var(--border-radius);
             border-bottom-left-radius: var(--border-radius);
@@ -285,14 +303,10 @@
       .Table__column {
         &:last-of-type {
           .Table__group {
-            margin-right: 10px;
+            margin-right: var(--group-margin);
             border-right: 1px solid @border-color-dark;
             border-top-right-radius: var(--border-radius);
             border-bottom-right-radius: var(--border-radius);
-
-            .Table__group__config__cell {
-              border-top-right-radius: var(--border-radius);
-            }
 
             .Table__cell:last-of-type {
               border-bottom-right-radius: var(--border-radius);
