Apply color persistency mode switch for runs colors (#194)
* Apply color persistency mode switch for runs colors

* Improve text copies of color settings popup

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/components/GroupByColor/GroupByColor.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/components/GroupByColor/GroupByColor.less
@@ -1,5 +1,9 @@
 @import '../../../../../../../vars';
 
+.GroupByColor__title {
+  margin-bottom: var(--component-spacing-xs) !important;
+}
+
 .ColorPalette {
   display: flex;
   align-items: center;
