Draw the selected metric line inside its aggregated area (#193)
* Draw focused metric line in aggregated area

* Apply highlight mode on aggregated areas

--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
@@ -164,10 +164,14 @@
   }
 
   .PlotArea {
-    opacity: 0.2;
+    opacity: 1;
+
+    &.inactive {
+      opacity: 0.2;
+    }
 
     &.active {
-      opacity: 1 !important;
+      opacity: 1;
     }
   }
 
