Improve UI/UX for panel chart popups (#203)
* Fix positioning of chart popups

* Sync popup position during panel resize

* Sync popup positioning during controls change events

--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PopUp/PopUp.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PopUp/PopUp.less
@@ -3,7 +3,7 @@
 @gap: 10px;
 
 .PopUp {
-  position: absolute;
+  position: fixed;
   box-sizing: border-box;
   height: 0;
 
@@ -13,10 +13,10 @@
 }
 
 .ChartPopUp {
-  z-index: 999;
+  z-index: 9999;
 }
 .TagPopUp {
-  z-index: 99;
+  z-index: 9999;
 }
 .TooltipPopUp {
   z-index: 9;
