--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -48,6 +48,10 @@
   }
 }
 
+.ContextBox__table__cell.active {
+  background-color: var(--primary-lighter) !important;
+}
+
 .ContextBox__table__row {
   cursor: pointer;
 }
@@ -78,11 +82,11 @@
 }
 
 .ContextBox__table__item__name {
-  color: inherit;
+  color: var(--primary);
   &:hover,
   &:active,
   &:visited {
-    color: inherit;
+    color: var(--primary);
   }
 }
 
@@ -99,12 +103,16 @@
   font-size: var(--text-xs);
 }
 
+.ContextBox__table__metric-indicator__color,
 .ContextBox__table__group-indicator__color {
   width: 0.85rem;
   height: 0.85rem;
-  margin-left: var(--space-xxs);
   border: 1px solid;
   border-radius: var(--border-radius);
+}
+
+.ContextBox__table__group-indicator__color {
+  margin-left: var(--space-xxs);
 }
 
 .ContextBox__table__group-indicator__stroke {
@@ -144,7 +152,6 @@
 }
 
 .ContextBox__table__item-aggregated_label {
-  color: #fff;
   text-shadow: none;
   margin-right: var(--space-xxs);
 
