Improve controls sidebar popovers positioning (#209)
* Improve controls sidebar popovers positioning

* Add bottom margin

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -86,11 +86,13 @@
   background-color: #fff;
   outline: 0;
   width: 400px;
+  max-height: 0;
   overflow-y: auto;
   border: 1px solid var(--primary-lighter);
   border-radius: var(--border-radius);
   box-shadow: var(--box-shadow);
   z-index: 9999;
+  background-origin: border-box;
 
   &.list {
     width: 250px;
@@ -98,6 +100,7 @@
 }
 
 .ControlsSidebar__item__popup-sidebar {
+  max-height: unset !important;
   right: 35px;
 }
 
