Add ability to resize table columns (#216)
* Add ability to resize table columns

* Improve resize experience for right pane columns

* Keep resized columns widths in local storage

* Add ability to reset column width

* Set body user select to none when resizing a column

--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -247,6 +247,29 @@
   }
 }
 
+.Table__column__resizeHandler {
+  position: absolute;
+  right: -1px;
+  top: 0;
+  width: 3px;
+  height: 100%;
+  background-color: var(--primary);
+  z-index: 10;
+  cursor: col-resize;
+  opacity: 0;
+  transition: opacity 110ms ease;
+
+  &.leftResize {
+    right: unset;
+    left: -1px;
+  }
+
+  &.isResizing,
+  &:hover {
+    opacity: 1;
+  }
+}
+
 .Table__cell--topHeader {
   top: 0;
   background-color: var(--grey-bg);
