Calculate group height based on config keys and items lengths (#218)

--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -177,6 +177,10 @@
   text-overflow: ellipsis;
   height: var(--cell-height);
 
+  &.placeholder {
+    border-right: unset;
+  }
+
   &.Table__group__header__cell {
     position: relative;
     background-color: @cell-color-dark;
