Add Hide All/Show All options to manage columns popup (#222)
* Add Hide All/Show All options to manage columns popup

* Tune styles

* Fix empty space issue for pinned panes

Co-authored-by: Gor Arakelyan <arakelyangor10@gmail.com>

--- a/client/src/ui/components/Table/Table.less
+++ b/client/src/ui/components/Table/Table.less
@@ -49,6 +49,7 @@
 .Table__pane--left,
 .Table__pane--right {
   position: sticky;
+  width: auto;
   z-index: 1;
 
   .Table__cell:not(.Table__cell--header) {
