--- a/client/src/components/hub/ContextTable/components/BarReorder/BarReorder.less
+++ b/client/src/components/hub/ContextTable/components/BarReorder/BarReorder.less
@@ -1,7 +1,7 @@
 @import '../../vars';
 
 .BarReorder {
-  width: 600px;
+  width: 630px;
 }
 
 .BarReorder__header {
@@ -22,7 +22,7 @@
 }
 
 .BarReorder__searchPanel__pane {
-  width: 200px;
+  width: 210px;
   padding: 0 6px;
   display: flex;
   align-items: center;
@@ -61,14 +61,14 @@
 
 .BarReorder__board {
   display: flex;
-  max-height: 230px;
+  max-height: 190px;
   overflow: hidden;
 }
 
 .BarReorder__list {
   background: #fff;
   padding: 6px;
-  width: 200px;
+  width: 210px;
   overflow-y: auto;
   max-height: 100%;
 
@@ -105,6 +105,7 @@
 
   &.highlighted {
     background-color: var(--primary-bg);
+    border-color: var(--primary-lighter);
   }
 }
 
@@ -146,5 +147,29 @@
   & > div {
     display: flex;
     align-items: center;
+  }
+}
+
+.BarReorder__footer {
+  background-color: var(--grey-bg);
+  border-top: 2px solid var(--grey-lighter);
+  z-index: 2;
+  padding: 4px;
+}
+
+.BarReorder__actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 230px;
+  margin: auto;
+}
+
+.BarReorder__action {
+  width: 46%;
+
+  .Button__content {
+    padding: 0.45em 0.9em;
   }
 }
