Add ability to change aggregation method (#223)
* Add ability to change aggregation method

* Add none as aggregation area option

* Display median value in context box table

* Show text for aggregated labels instead of icons

* Remove tooltips from aggregated labels of group values

--- a/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
+++ b/client/src/screens/hub/HubMainScreen/components/ContextBox/ContextBox.less
@@ -149,15 +149,15 @@
   align-items: center;
   justify-content: flex-start;
   padding: 1px;
+
+  & > *:last-of-type .ContextBox__table__item-aggregated_label {
+    margin-right: 0;
+  }
 }
 
 .ContextBox__table__item-aggregated_label {
   text-shadow: none;
   margin-right: var(--space-xxs);
-
-  &:last-of-type {
-    margin-right: 0;
-  }
 
   &.outline {
     color: inherit;
