--- a/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
+++ b/client/src/screens/hub/HubMainScreen/components/ControlsSidebar/ControlsSidebar.less
@@ -303,3 +303,11 @@
     }
   }
 }
+
+.ControlsSidebar__item__popup__overline {
+  padding: 0 var(--component-spacing-sm) var(--component-spacing-sm);
+}
+
+.ControlsSidebar__item__popup__overline--align {
+  padding-top: var(--component-spacing-sm);
+}
